--- a/po/el.po
+++ b/po/el.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-05-06 23:11+0200\n"
-"PO-Revision-Date: 2006-05-06 15:05+0200\n"
+"POT-Creation-Date: 2006-05-07 04:56+0300\n"
+"PO-Revision-Date: 2006-05-07 12:32+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
@@ -433,78 +433,77 @@ msgid "Please report bugs to <%s>.\n"
 msgstr "Παρακαλούμε αναφέρατε σφάλματα στον <%s>/\n"
 
 #. allocate the file chooser
-#: ../exo-desktop-item-edit/exo-die-command-entry.c:262
-#, fuzzy
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:295
 msgid "Select an Application"
 msgstr "Επιλογή μιας εφαρμογής"
 
-#: ../exo-desktop-item-edit/exo-die-command-entry.c:271
-#: ../exo-desktop-item-edit/exo-die-editor.c:634
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:304
+#: ../exo-desktop-item-edit/exo-die-editor.c:629
 msgid "All Files"
-msgstr ""
-
-#: ../exo-desktop-item-edit/exo-die-command-entry.c:276
-msgid "Executable Files"
-msgstr ""
-
-#: ../exo-desktop-item-edit/exo-die-command-entry.c:291
-msgid "Perl Scripts"
-msgstr ""
-
-#: ../exo-desktop-item-edit/exo-die-command-entry.c:297
-msgid "Python Scripts"
-msgstr ""
-
-#: ../exo-desktop-item-edit/exo-die-command-entry.c:303
-msgid "Ruby Scripts"
-msgstr ""
+msgstr "Όλα τα αρχεία"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:309
+msgid "Executable Files"
+msgstr "Εκτελέσιμα αρχεία"
+
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:324
+msgid "Perl Scripts"
+msgstr "Δέσμες ενεργειών Perl"
+
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:330
+msgid "Python Scripts"
+msgstr "Δέσμες ενεργειών Python"
+
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:336
+msgid "Ruby Scripts"
+msgstr "Δέσμες ενεργειών Ruby"
+
+#: ../exo-desktop-item-edit/exo-die-command-entry.c:342
 msgid "Shell Scripts"
-msgstr ""
+msgstr "Δέσμες ενεργειών κέλυφους"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:306
 msgid "_Name:"
-msgstr ""
+msgstr "_Όνομα:"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:324
 msgid "C_omment:"
-msgstr ""
+msgstr "Σχόλι_ο:"
 
 #. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:342
 msgid "Comm_and:"
-msgstr ""
+msgstr "Εντο_λή:"
 
 #. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:359
 msgid "_URL:"
-msgstr ""
+msgstr "_Διεύθυνση:"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:377
 msgid "_Icon:"
-msgstr ""
+msgstr "Ε_ικονίδιο:"
 
 #. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:396
-#: ../exo-desktop-item-edit/exo-die-editor.c:1088
+#: ../exo-desktop-item-edit/exo-die-editor.c:1066
 msgid "No icon"
-msgstr ""
+msgstr "Χωρίς εικονίδιο"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:407
 msgid "Options:"
-msgstr ""
+msgstr "Επιλογές:"
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:418
 msgid "Use _startup notification"
-msgstr ""
+msgstr "Χρήση γνω_στοποίηση εκκίνησης"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:419
 msgid ""
@@ -512,118 +511,119 @@ msgid ""
 "from the file manager or the menu. Not every application supports startup "
 "notification."
 msgstr ""
+"Επιλέξτε αυτό για να ενεργοποιήσετε την ειδοποίηση εκκίνησης όταν η εντολή "
+"εκτελείται από τον διαχειριστή αρχείων ή το μενού. Δεν υποστηρίζεται από "
+"όλες τις εφαρμογές."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
-#, fuzzy
 msgid "Run in _terminal"
-msgstr "Τερματικό X"
+msgstr "Εκτέλεση σε τερματι_κό"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:432
 msgid "Select this option to run the command in a terminal window."
 msgstr ""
+"Επιλογή αυτού του κουτιού για εκτέλεση της εντολής σε ένα παράθυρο "
+"τερματικού."
 
-#: ../exo-desktop-item-edit/exo-die-editor.c:624
-#, fuzzy
+#: ../exo-desktop-item-edit/exo-die-editor.c:619
 msgid "Select an Icon"
-msgstr "Επιλογή μιας εφαρμογής"
+msgstr "Επιλογή εικονιδίου"
 
-#: ../exo-desktop-item-edit/exo-die-editor.c:639
+#: ../exo-desktop-item-edit/exo-die-editor.c:634
 msgid "Image Files"
-msgstr ""
+msgstr "Εικόνες"
 
 #. --- constants ---
 #: ../exo-desktop-item-edit/main.c:40
 msgid "Create Launcher"
-msgstr ""
+msgstr "Δημιουργία εκκινητή"
 
 #: ../exo-desktop-item-edit/main.c:40
 msgid "Create Link"
-msgstr ""
+msgstr "Δημιουργία δεσμού"
 
 #: ../exo-desktop-item-edit/main.c:41
 msgid "Edit Launcher"
-msgstr ""
+msgstr "Επεξεργασία εκκινητή"
 
 #: ../exo-desktop-item-edit/main.c:41
 msgid "Edit Link"
-msgstr ""
+msgstr "Επεξεργασία δεσμού"
 
 #: ../exo-desktop-item-edit/main.c:61
 msgid "Create a new desktop file in the given directory"
-msgstr ""
+msgstr "Δημιουργία νέου αρχείου desktop στον επιλεγμένο κατάλογο"
 
 #: ../exo-desktop-item-edit/main.c:62
 msgid "Type of desktop file to create (Application or Link)"
-msgstr ""
+msgstr "Τύπος αρχείου desktop (εφαρμογή ή δεσμός)"
 
 #: ../exo-desktop-item-edit/main.c:63
 msgid "Preset name when creating a desktop file"
-msgstr ""
+msgstr "Εξορισμού όνομα κατά τη δημιουργία ενός αρχείου desktop"
 
 #: ../exo-desktop-item-edit/main.c:64
 msgid "Preset comment when creating a desktop file"
-msgstr ""
+msgstr "Εξορισμού σχόλιο κατά τη δημιουργία ενός αρχείου desktop"
 
 #: ../exo-desktop-item-edit/main.c:65
 msgid "Preset command when creating a launcher"
-msgstr ""
+msgstr "Εξορισμού εντολή κατά τη δημιουργία ενός αρχείου desktop"
 
 #: ../exo-desktop-item-edit/main.c:66
 msgid "Preset URL when creating a link"
-msgstr ""
+msgstr "Εξορισμού URL κατά τη δημιουργία ενός αρχείου desktop"
 
 #: ../exo-desktop-item-edit/main.c:67
 msgid "Preset icon when creating a desktop file"
-msgstr ""
+msgstr "Εξορισμού εικονίδιο κατά τη δημιουργία ενός αρχείου desktop"
 
 #: ../exo-desktop-item-edit/main.c:68
-#, fuzzy
 msgid "Print version information and exit"
-msgstr "  -v, --version        Εμφανίζει τις πληροφορίες έκδοσης\n"
+msgstr "Αναφέρει τις πληροφορίες έκδοσης"
 
 #. initialize Gtk+
 #: ../exo-desktop-item-edit/main.c:110
 msgid "[FILE|FOLDER]"
-msgstr ""
+msgstr "[ΑΡΧΕΙΟ|ΦΑΚΕΛΟΣ]"
 
 #: ../exo-desktop-item-edit/main.c:123
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open display: %s"
-msgstr "Το άνοιγμα του \"%s\" απέτυχε."
+msgstr "Αποτυχία ανοίγματος οθόνης: %s"
 
 #: ../exo-desktop-item-edit/main.c:152
-#, fuzzy
 msgid "No file/folder specified"
-msgstr "Δεν ορίστηκε εντολή"
+msgstr "Δεν έχει οριστεί όνομα αρχείου ή φακέλου."
 
 #. tell the user that we don't support the type
 #: ../exo-desktop-item-edit/main.c:210
 #, c-format
 msgid "Unsupported desktop file type '%s'"
-msgstr ""
+msgstr "Μη υποστηριζόμενος τύπος αρχείου '%s'"
 
 #. add the "Create"/"Save" button (as default)
 #: ../exo-desktop-item-edit/main.c:230
 msgid "C_reate"
-msgstr ""
+msgstr "_Δημιουργία"
 
 #. create failed, ask the user to specify a file name
 #: ../exo-desktop-item-edit/main.c:326
 msgid "Choose filename"
-msgstr ""
+msgstr "Επιλέξετε όνομα αρχείου"
 
 #: ../exo-desktop-item-edit/main.c:380
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to create \"%s\"."
-msgstr "Το άνοιγμα του \"%s\" απέτυχε."
+msgstr "Η δημιουργία του \"%s\" απέτυχε."
 
 #: ../exo-desktop-item-edit/main.c:380
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to save \"%s\"."
-msgstr "Το άνοιγμα του \"%s\" απέτυχε."
+msgstr "Η αποθήκευση του \"%s\" απέτυχε"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:100
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
@@ -662,8 +662,9 @@ msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
-"Ο προτιμώμενος αναγνώστης αλληλογραφίας θα χρησιμοποιηθεί\n"
-"για τη σύνθεση αλληλογραφίας όταν επιλέγετε διευθύνσεις αλληλογραφίας."
+"Ο προτιμώμενος αναγνώστης αλληλογραφίας\n"
+"θα χρησιμοποιηθεί για τη σύνθεση αλληλογραφίας\n"
+"όταν επιλέγετε διευθύνσεις αλληλογραφίας."
 
 #.
 #. Utilities
@@ -681,8 +682,9 @@ msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
-"Ο προτιμώμενος εξομοιωτής τερματικού θα χρησιμοποιηθεί\n"
-"για να εκτελεστούν εντολές που απαιτούν περιβάλλον γραμμής εντολών."
+"Ο προτιμώμενος εξομοιωτής τερματικού θα\n"
+"χρησιμοποιηθεί για να εκτελεστούν εντολές που\n"
+"απαιτούν περιβάλλον γραμμής εντολών."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:258
 msgid "Failed to open the documentation browser."
@@ -968,16 +970,3 @@ msgstr ""
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Το άνοιγμα του URL \"%s\" απέτυχε."
-
-#~ msgid ""
-#~ "Copyright (c) 2005\n"
-#~ "        os-cillation e.K. All rights reserved.\n"
-#~ "\n"
-#~ "Written by Benedikt Meurer <benny@xfce.org>.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "Copyright (c) 2005\n"
-#~ "        os-cillation e.K. All rights reserved.\n"
-#~ "\n"
-#~ "Γραμμένο από τον Benedikt Meurer <benny@xfce.org>.\n"
-#~ "\n"
