Updated Polish translations by Piotr Malinski <admin@rk.edu.pl>.
(Old svn revision: 21567)

--- a/po/pl.po
+++ b/po/pl.po
@@ -336,11 +336,11 @@ msgstr "Odstęp pomiędzy dwoma sąsiednimi wierszami"
 
 #: ../exo/exo-wrap-table.c:199
 msgid "Homogeneous"
-msgstr ""
+msgstr "Homogeniczny"
 
 #: ../exo/exo-wrap-table.c:200
 msgid "Whether the children should be all the same size"
-msgstr ""
+msgstr "Określa czy dzieci powinny mieć te same wymiary"
 
 #: ../exo/exo-xsession-client.c:152
 msgid "Window group"
@@ -356,7 +356,7 @@ msgstr "Uruchom ponownie polecenie"
 
 #: ../exo/exo-xsession-client.c:164
 msgid "Session restart command"
-msgstr ""
+msgstr "Polecenie restartu sesji"
 
 #: ../exo-csource/main.c:230
 #, c-format
@@ -417,6 +417,11 @@ msgid ""
 "%s source package.\n"
 "\n"
 msgstr ""
+"%s nie zapewnia ŻADNEJ GRWARANCJI,\n"
+"Możesz rozprowadzać %s pod licencją\n"
+"GNU Lesser General Public License, którą można znaleźć w\n"
+"pakiecie źródłowy %s.\n"
+"\n"
 
 #: ../exo-csource/main.c:255 ../exo-desktop-item-edit/main.c:145
 #: ../exo-open/main.c:107
@@ -799,16 +804,17 @@ msgstr "Nie udało się uruchomić preferowanych aplikacji exo"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:60
 msgid "Button Label|Preferred Applications"
-msgstr ""
+msgstr "Preferowane Aplikacje"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr ""
+"Domyślna aplikacja dla danej czynności (przeglądarka, klient pocztowy, "
+"terminal)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Preferred Applications"
-msgstr "Preferowane aplikacje"
+msgstr "Preferowane aplikacje Xfce 4"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
@@ -954,16 +960,3 @@ msgstr "Nie udało się uruchomić domyślnej aplikacji dla kategorii \"%s\"."
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Nie udało się otworzyć URLa \"%s\"."
-
-#~ msgid ""
-#~ "Copyright (c) 2005\n"
-#~ "        os-cillation e.K. All rights reserved.\n"
-#~ "\n"
-#~ "Written by Benedikt Meurer <benny@xfce.org>.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "Copyright (c) 2005\n"
-#~ "        os-cillation e.K. Wszelkie prawa zastrzeżone.\n"
-#~ "\n"
-#~ "Napisane przez Benedikta Meurera <benny@xfce.org>.\n"
-#~ "\n"
