--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-07  Daichi Kawahata <daichi@xfce.org>
+
+	* pl.po: Updated Polish translations by Piotr Malinski
+	  <admin@rk.edu.pl>.
+
 2009-05-07  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Greek translation update.
