Updated Japanese translations.
(Old svn revision: 21570)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,11 +1,20 @@
 2006-05-07  Daichi Kawahata <daichi@xfce.org>
 
+	* ja.po: Updated Japanese translations.
 	* pl.po: Updated Polish translations by Piotr Malinski
 	  <admin@rk.edu.pl>.
 
-2009-05-07  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-05-07  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Greek translation update.
+
+2006-05-07  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu trunk: exo & utils updates
+
+2006-05-07  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Finnish translations updated.
 
 2006-05-06  Benedikt Meurer <benny@xfce.org>
 
@@ -13,11 +22,19 @@
 	* libexo-0.3.pot, *.po: Updated.
 	* de.po: Update the german translations.
 
+2006-05-06  Adriano Winter Bess <awbess@gmail.com>
+
+	* pt_BR.po: Updated Brazilian Portuguese translations.
+
 2006-05-06  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Greek translation update.
 
-2006-05-06  Benedikt Meurer <benny@xfce.org>
+2006-05-06  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu trunk: little updates
+
+2006-05-05  Benedikt Meurer <benny@xfce.org>
 
 	* libexo-0.3.pot, *.po: Updated.
 	* de.po: Update the german translations.
@@ -27,6 +44,14 @@
 	* cs.po: Updated Czech translations by Michal Varady
 	  <miko.vaji@gmail.com>.
 
+2006-05-05  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu trunk: little exo updates
+
+2006-05-05  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Finnish translations updated.
+
 2006-05-05  Piarres Beobide <pi@beobide.net>
 
 	* eu.po: Updated Basque translation.
@@ -34,14 +59,14 @@
 2006-05-05  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
-	* POTFILES.in; Added a missing file.
+	* POTFILES.in: Added a missing file.
 	* libexo-0.3.pot, *.po: Updated.
 
 2006-05-04  Daichi Kawahata <daichi@xfce.org>
 
 	* LINGUAS, cs.po: Added Czech translations by Michal Varady
 	  <miko.vaji@gmail.com>.
-	* *.po: Bump.
+	* libexo-0.3.pot, *.po: Bump.
 	* ja.po: Added a comment.
 	* pl.po: Updated Polish translations by Piotr Malinski
 	  <admin@rk.edu.pl>.
@@ -51,15 +76,29 @@
 	* ru.po: Updated Russian translations by Maxim Zenin
 	  <webmechanics@gmail.com>.
 	* ja.po: Updated Japanese translations.
+	* eu.po, fi.po, he.po, hu.po: Updated.
 
 2006-04-30  Daichi Kawahata <daichi@xfce.org>
 
 	* LINGUAS, pl.po: Added Polish translations by Piotr Malinski
 	  <admin@rk.edu.pl>.
 
+2006-04-30  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu trunk: exo & trigger-launcher updates
+
 2006-04-29  Daichi Kawahata <daichi@xfce.org>
 
 	* et.po: Fixed.
+
+2006-04-26  Peeter Vois <peeter.vois@proekspert.ee>
+
+	* LINGUAS: .
+	* et.po: .
+
+2006-04-25  Yuval Tanny <tanai@int.gov.il>
+
+	* LINGUAS, he.po: Hebrew translation update.
 
 2006-04-23  Daichi Kawahata <daichi@xfce.org>
 
@@ -67,9 +106,17 @@
 	  <fedoseev.sergey@gmail.com>.
 	* ja.po: Updated Japanese translations.
 
-2006-04-19  Piarres Beobide <pi@beobide.net>
+2006-04-21  Piarres Beobide <pi@beobide.net>
 
-	* eu.po: Basque translation update
+	* eu.po: Basque translation update.
+
+2006-04-20  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Finnish translations updated.
+
+2006-04-19  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu trunk: updates
 
 2006-04-19  Benedikt Meurer <benny@xfce.org>
 
@@ -79,16 +126,30 @@
 
 	* libexo-0.3.pot, *.po: Updated.
 
+2006-04-16  Pau Rullan Ferragut <paurullan@bulma.net>
+
+	* ca.po: [i18n] catalan Little fix in libexo
+
+2006-04-16  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu trunk: libexo updates
+
 2006-04-16  Daichi Kawahata <daichi@xfce.org>
 
 	* ru.po: Updated Russian translations by Andrey Fedoseev
 	  <andrey.fedoseev@gmail.com>.
 
+2006-04-15  Adriano Winter Bess <awbess@gmail.com>
+
+	* pt_BR.po: Updated pt_BR translations.
+
 2006-04-15  Daichi Kawahata <daichi@xfce.org>
 
+	* ca.po, el.po, hu.po, libexo-0.3.pot: Bump, etc.
 	* ru.po: Updated Russian translations by Andrey Fedoseev
 	  <andrey.fedoseev@gmail.com>.
 	* ja.po: Updated Japanese translations.
+	* LINGUAS: Added missing language codes.
 
 2006-04-15  Stavros Giannouris <stavrosg2002@freemail.gr>
 
@@ -100,6 +161,10 @@
 	  <jari.rahkonen@pp1.inet.fi>.
 	* libexo-0.3.pot, *.po: Updated.
 
+2006-04-14  Szervac Attila <sas@321.hu>
+
+	* hu.po: hu trunk: initial libexo
+
 2006-04-14  Benedikt Meurer <benny@xfce.org>
 
 	* libexo-0.3.pot, *.po: Merge new strings.
@@ -110,9 +175,17 @@
 	  <jari.rahkonen@pp1.inet.fi>.
 	* libexo-0.3.pot, *.po: Updated.
 
+2006-04-02  Pau Rullan Ferragut <paurullan@bulma.net>
+
+	* ca.po: [i18n] catalan little of work on catalan translations
+
 2006-04-01  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Updated Greek translation by Stathis Kamperis
+
+2006-03-31  Adriano Winter Bess <awbess@gmail.com>
+
+	* pt_BR.po: Updated pt_BR translations.
 
 2006-03-27  Daichi Kawahata <daichi@xfce.org>
 
