--- a/po/pl.po
+++ b/po/pl.po
@@ -2,14 +2,15 @@
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
 # Piotr Maliński <admin@rk.edu.pl>, 2006.
+# Szymon Kałasz <szymon_maestro@gazeta.pl>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.7svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-06 23:11+0200\n"
-"PO-Revision-Date: 2006-05-01 00:34+0900\n"
-"Last-Translator: Piotr Maliński <admin@rk.edu.pl>\n"
+"PO-Revision-Date: 2006-05-07 19:50+0200\n"
+"Last-Translator: Szymon Kałasz <szymon_maestro@gazeta.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -62,7 +63,7 @@ msgstr ""
 
 #: ../exo/exo-icon-bar.c:292 ../exo/exo-icon-view.c:935
 msgid "Text column"
-msgstr "Kolumna tekstowa"
+msgstr ""
 
 #: ../exo/exo-icon-bar.c:293 ../exo/exo-icon-view.c:936
 msgid "Model column used to retrieve the text from"
@@ -431,77 +432,76 @@ msgstr "Błędy proszę zgłaszać do <%s>.\n"
 
 #. allocate the file chooser
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:262
-#, fuzzy
 msgid "Select an Application"
 msgstr "Wybierz aplikację"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:271
 #: ../exo-desktop-item-edit/exo-die-editor.c:634
 msgid "All Files"
-msgstr ""
+msgstr "Wszystkie pliki"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:276
 msgid "Executable Files"
-msgstr ""
+msgstr "Pliki wykonywalne"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:291
 msgid "Perl Scripts"
-msgstr ""
+msgstr "Skrypty Perla"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:297
 msgid "Python Scripts"
-msgstr ""
+msgstr "Skrypty Pythona"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:303
 msgid "Ruby Scripts"
-msgstr ""
+msgstr "Skrypty Ruby"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:309
 msgid "Shell Scripts"
-msgstr ""
+msgstr "Skrypty powłoki"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:306
 msgid "_Name:"
-msgstr ""
+msgstr "_Nazwa:"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:324
 msgid "C_omment:"
-msgstr ""
+msgstr "_Komentarz:"
 
 #. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:342
 msgid "Comm_and:"
-msgstr ""
+msgstr "_Polecenie:"
 
 #. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:359
 msgid "_URL:"
-msgstr ""
+msgstr "_URL:"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:377
 msgid "_Icon:"
-msgstr ""
+msgstr "_Ikona:"
 
 #. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:396
 #: ../exo-desktop-item-edit/exo-die-editor.c:1088
 msgid "No icon"
-msgstr ""
+msgstr "Brak ikony"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:407
 msgid "Options:"
-msgstr ""
+msgstr "Opcje:"
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:418
 msgid "Use _startup notification"
-msgstr ""
+msgstr "Użyj p_owiadomienia o uruchamianiu"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:419
 msgid ""
@@ -509,6 +509,8 @@ msgid ""
 "from the file manager or the menu. Not every application supports startup "
 "notification."
 msgstr ""
+"Wybierz tą opcję, aby uaktywnić powiadamianie o uruchomieniu polecenia z "
+"menedżera plików lub menu. Nie każda aplikacja to obsługuje."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -516,111 +518,108 @@ msgstr ""
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
 #, fuzzy
 msgid "Run in _terminal"
-msgstr "Terminal X"
+msgstr "Uruchom w _terminalu"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:432
 msgid "Select this option to run the command in a terminal window."
-msgstr ""
+msgstr "Zaznacz tą opcję, aby uruchomić polecenie w oknie terminala."
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:624
-#, fuzzy
 msgid "Select an Icon"
-msgstr "Wybierz aplikację"
+msgstr "Wybierz ikonę"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:639
 msgid "Image Files"
-msgstr ""
+msgstr "Pliki graficzne"
 
 #. --- constants ---
 #: ../exo-desktop-item-edit/main.c:40
 msgid "Create Launcher"
-msgstr ""
+msgstr "Utwórz aktywator"
 
 #: ../exo-desktop-item-edit/main.c:40
 msgid "Create Link"
-msgstr ""
+msgstr "Utwórz łącze"
 
 #: ../exo-desktop-item-edit/main.c:41
 msgid "Edit Launcher"
-msgstr ""
+msgstr "Edytuj aktywator"
 
 #: ../exo-desktop-item-edit/main.c:41
 msgid "Edit Link"
-msgstr ""
+msgstr "Edytuj łącze"
 
 #: ../exo-desktop-item-edit/main.c:61
 msgid "Create a new desktop file in the given directory"
-msgstr ""
+msgstr "Utwórz nowy plik pulpitu w wybranym katalogu"
 
 #: ../exo-desktop-item-edit/main.c:62
 msgid "Type of desktop file to create (Application or Link)"
-msgstr ""
+msgstr "Typ pliku pulpitu do utworzenia (aplikacja lub łącze)"
 
 #: ../exo-desktop-item-edit/main.c:63
 msgid "Preset name when creating a desktop file"
-msgstr ""
+msgstr "Domyślna nazwa nowego pliku pulpitu"
 
 #: ../exo-desktop-item-edit/main.c:64
 msgid "Preset comment when creating a desktop file"
-msgstr ""
+msgstr "Domyślny komentarz nowego pliku pulpitu"
 
 #: ../exo-desktop-item-edit/main.c:65
 msgid "Preset command when creating a launcher"
-msgstr ""
+msgstr "Domyślne polecenie nowego pliku pulpitu"
 
 #: ../exo-desktop-item-edit/main.c:66
 msgid "Preset URL when creating a link"
-msgstr ""
+msgstr "Domyślny URL nowego pliku pulpitu"
 
 #: ../exo-desktop-item-edit/main.c:67
 msgid "Preset icon when creating a desktop file"
-msgstr ""
+msgstr "Domyślna ikona nowego pliku pulpitu"
 
 #: ../exo-desktop-item-edit/main.c:68
-#, fuzzy
 msgid "Print version information and exit"
-msgstr "  -v, --version     Wyświetl informacje o wersji i wyjdź\n"
+msgstr "Wyświetl informacje o wersji i wyjdź"
 
 #. initialize Gtk+
 #: ../exo-desktop-item-edit/main.c:110
 msgid "[FILE|FOLDER]"
-msgstr ""
+msgstr "[PLIK|FOLDER]"
 
 #: ../exo-desktop-item-edit/main.c:123
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open display: %s"
-msgstr "Nie udało się otworzyć \"%s\"."
+msgstr "Nie udało się otworzyć ekranu: %s."
 
 #: ../exo-desktop-item-edit/main.c:152
-#, fuzzy
 msgid "No file/folder specified"
-msgstr "Nie określono polecenia"
+msgstr "Nie podano pliku lub folderu"
 
 #. tell the user that we don't support the type
 #: ../exo-desktop-item-edit/main.c:210
 #, c-format
 msgid "Unsupported desktop file type '%s'"
-msgstr ""
+msgstr "Nieobsługiwany typ pliku pulpitu \"%s\""
 
 #. add the "Create"/"Save" button (as default)
 #: ../exo-desktop-item-edit/main.c:230
 msgid "C_reate"
-msgstr ""
+msgstr "_Utwórz"
 
 #. create failed, ask the user to specify a file name
 #: ../exo-desktop-item-edit/main.c:326
 msgid "Choose filename"
-msgstr ""
+msgstr "Wybierz nazwę pliku"
 
 #: ../exo-desktop-item-edit/main.c:380
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to create \"%s\"."
-msgstr "Nie udało się otworzyć \"%s\"."
+msgstr "Nie udało się utworzyć \"%s\"."
 
 #: ../exo-desktop-item-edit/main.c:380
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to save \"%s\"."
-msgstr "Nie udało się otworzyć \"%s\"."
+msgstr "Nie udało się zachować \"%s\"."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:100
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
@@ -629,7 +628,7 @@ msgstr "Preferowane aplikacje"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:101
 msgid "Select default applications for various services"
-msgstr ""
+msgstr "Wybierz domyślne aplikacje dla różnych usług"
 
 #.
 #. Internet
