--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2006-05-13  Daichi Kawahata <daichi@xfce.org>
 
+	* libexo-0.3.pot, *.po: Updated.
 	* pl.po: Updated Polish translations by Szymon Kalasz
 	  <szymon_maestro@gazeta.pl>.
 
