Added/Updated Czech translations by Michal Varady <miko.vaji@gmail.com>.
(Old svn revision: 21640)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-05-13  Daichi Kawahata <daichi@xfce.org>
 
+	* cs.po: Updated Czech translations by Michal Varady
+          <miko.vaji@gmail.com>.
 	* libexo-0.3.pot, *.po: Updated.
 	* pl.po: Updated Polish translations by Szymon Kalasz
 	  <szymon_maestro@gazeta.pl>.
