--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -6,6 +6,10 @@
 	* pl.po: Updated Polish translations by Szymon Kalasz
 	  <szymon_maestro@gazeta.pl>.
 
+2006-05-10  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Finnish translations updated.
+
 2006-05-07  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
