--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-16	Benedikt Meurer <benny@xfce.org>
+
+	* python/: Update python bindings to support compilation with PyGTK
+	  2.9.0 and newer. Bug #1815.
+
 2006-05-14	Benedikt Meurer <benny@xfce.org>
 
 	* exo-helper/exo-helper-chooser.c(browse_clicked): Make this consistent
