--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-21  Daichi Kawahata <daichi@xfce.org>
+
+	* pl.po: Updated Polish translations by Szymon Kalasz
+	  <szymon_maestro@gazeta.pl>.
+
 2006-05-15  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ca.po: updated catalan translation by
