Updated Japanese translations.
(Old svn revision: 21744)

--- a/po/ja.po
+++ b/po/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.7svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-13 14:07+0900\n"
-"PO-Revision-Date: 2006-05-08 00:36+0900\n"
+"PO-Revision-Date: 2006-05-21 13:12+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -708,27 +708,27 @@ msgstr "インターネット"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:138
 msgid "Default Web Browser"
-msgstr "ウェブブラウザー"
+msgstr "標準のウェブブラウザー"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:146
 msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
-"ここで指定した、お気に入りのウェブブラウザーは、\n"
+"ここで指定したお気に入りのウェブブラウザーは、\n"
 "リンクを開いたりヘルプの内容を表示するために\n"
 "使われます。"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:170
 msgid "Default Mail Reader"
-msgstr "メールリーダー"
+msgstr "標準のメーラー"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:178
 msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
-"ここで指定した、お気に入りのメールリーダーは、\n"
+"ここで指定したお気に入りのメーラーは、\n"
 "メールアドレスをクリックしてメールを作成する時に\n"
 "使われます。"
 
@@ -777,7 +777,7 @@ msgstr "標準のウェブブラウザーを設定するのに失敗しました
 
 #: ../exo-helper/exo-helper-chooser.c:336
 msgid "Failed to set default Mail Reader"
-msgstr "標準のメールリーダーを設定するのに失敗しました"
+msgstr "標準のメーラーを設定するのに失敗しました"
 
 #: ../exo-helper/exo-helper-chooser.c:337
 msgid "Failed to set default Terminal Emulator"
@@ -793,7 +793,7 @@ msgstr "ウェブブラウザーを選択してください"
 
 #: ../exo-helper/exo-helper-chooser.c:440
 msgid "Choose a custom Mail Reader"
-msgstr "メールリーダーを選択してください"
+msgstr "メーラーを選択してください"
 
 #: ../exo-helper/exo-helper-chooser.c:441
 msgid "Choose a custom Terminal Emulator"
@@ -812,7 +812,7 @@ msgid ""
 "Specify the application you want to use\n"
 "as default Mail Reader for Xfce:"
 msgstr ""
-"標準のメールリーダーとして使用したい\n"
+"標準のメーラーとして使用したい\n"
 "アプリケーションを指定してください:"
 
 #: ../exo-helper/exo-helper-chooser.c:448
@@ -852,8 +852,8 @@ msgid ""
 "Please choose your preferred Mail Reader\n"
 "now and click OK to proceed."
 msgstr ""
-"お気に入りのメールリーダーを\n"
-"選択して「OK」をクリックしてください。"
+"お気に入りのメーラーを選択して\n"
+"「OK」をクリックしてください。"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:288
 msgid ""
@@ -1006,7 +1006,7 @@ msgid ""
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
 "  WebBrowser       - お気に入りのウェブブラウザー。\n"
-"  MailReader       - お気に入りのウェブブラウザー。\n"
+"  MailReader       - お気に入りのメーラー。\n"
 "  TerminalEmulator - お気に入りのターミナル。"
 
 #: ../exo-open/main.c:63
