--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2006-05-21  Daichi Kawahata <daichi@xfce.org>
 
+	* ja.po: Updated Japanese translations.
 	* pl.po: Updated Polish translations by Szymon Kalasz
 	  <szymon_maestro@gazeta.pl>.
 
