Gets consistency with the translated strings in GTK+.
(Old svn revision: 21770)

--- a/po/ja.po
+++ b/po/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.7svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-13 14:07+0900\n"
-"PO-Revision-Date: 2006-05-21 13:12+0900\n"
+"PO-Revision-Date: 2006-05-22 23:54+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -620,35 +620,35 @@ msgstr "リンクを編集"
 
 #: ../exo-desktop-item-edit/main.c:72
 msgid "Create a new desktop file in the given directory"
-msgstr "指定されたファルダに新しいデスクトップファイルを作成します。"
+msgstr "指定されたファルダに新しいデスクトップファイルを作成する"
 
 #: ../exo-desktop-item-edit/main.c:73
 msgid "Type of desktop file to create (Application or Link)"
-msgstr "作成するデスクトップファイルのタイプ (Application または Link) です。"
+msgstr "作成するデスクトップファイルのタイプ (Application または Link)"
 
 #: ../exo-desktop-item-edit/main.c:74
 msgid "Preset name when creating a desktop file"
-msgstr "デスクトップファイルを作成する場合のプリセット名です。"
+msgstr "デスクトップファイルを作成する場合のプリセット名"
 
 #: ../exo-desktop-item-edit/main.c:75
 msgid "Preset comment when creating a desktop file"
-msgstr "デスクトップファイルを作成する場合のプリセットコメントです。"
+msgstr "デスクトップファイルを作成する場合のプリセットコメント"
 
 #: ../exo-desktop-item-edit/main.c:76
 msgid "Preset command when creating a launcher"
-msgstr "ランチャーを作成する場合のプリセットコマンドです。"
+msgstr "ランチャーを作成する場合のプリセットコマンド"
 
 #: ../exo-desktop-item-edit/main.c:77
 msgid "Preset URL when creating a link"
-msgstr "リンクを作成する場合のプリセットURLです。"
+msgstr "リンクを作成する場合のプリセットURL"
 
 #: ../exo-desktop-item-edit/main.c:78
 msgid "Preset icon when creating a desktop file"
-msgstr "デスクトップファイルを作成する場合のプリセットアイコンです。"
+msgstr "デスクトップファイルを作成する場合のプリセットアイコン"
 
 #: ../exo-desktop-item-edit/main.c:79
 msgid "Print version information and exit"
-msgstr "バージョン情報を表示して終了します"
+msgstr "バージョン情報を表示して終了する"
 
 #. initialize Gtk+
 #: ../exo-desktop-item-edit/main.c:125
