--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-22  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Gets consistency with the translated strings
+	  in GTK+.
+
 2006-05-21  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
