--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-25	Benedikt Meurer <benny@xfce.org>
+
+	* exo-helper/helpers/firefox.desktop.in: Don't forcibly open a new
+	  window for Firefox, but do whatever the user configured in Firefox.
+	  Bug #1850.
+
 2006-05-16	Benedikt Meurer <benny@xfce.org>
 
 	* python/: Update python bindings to support compilation with PyGTK
