--- a/po/eu.po
+++ b/po/eu.po
@@ -6,10 +6,10 @@
 # Piarres Beobide <pi@beobide.net>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1.7svn\n"
+"Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-13 14:07+0900\n"
-"PO-Revision-Date: 2006-03-06 21:32+0100\n"
+"PO-Revision-Date: 2006-05-30 16:08+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
@@ -27,12 +27,12 @@ msgid ""
 "The preferred place to ellipsize the string, if the cell renderer does not "
 "have enough room to display the entire string, if at all"
 msgstr ""
-"Katea elipsatzeko lekurik gogojoena, errendatze gelaxkak ez badu kate osoa "
-"bistratzeko memoria aski, hala ere"
+"Katea elipsatzeko lekurik gogokoena, errendatze gelaxkak ez badu kate osoa "
+"bistaratzeko memoria aski, hala ere"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:163
 msgid "Ellipsize set"
-msgstr "Ellipsize set"
+msgstr "Ellipsize ezarri"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:164
 msgid "Whether this tag affects the ellipsize mode"
@@ -43,7 +43,7 @@ msgid ""
 "The preferred place to ellipsize the string, if the label does not have "
 "enough room to display the entire string, if at all"
 msgstr ""
-"Katea elipsatzeko lekurik gogojoena, etiketak ez badu kate osoa bistratzeko "
+"Katea elipsatzeko lekurik gogokoena, etiketak ez badu kate osoa bistaratzeko "
 "memoria aski, hala ere"
 
 #: ../exo/exo-icon-bar.c:259 ../exo/exo-icon-view.c:791
@@ -112,7 +112,7 @@ msgstr "Kurtsore elementu testu kolorea"
 
 #: ../exo/exo-icon-view.c:659
 msgid "Column Spacing"
-msgstr "Zutane Tartea"
+msgstr "Zutabe Tartea"
 
 #: ../exo/exo-icon-view.c:660
 msgid "Space which is inserted between grid column"
@@ -179,8 +179,7 @@ msgid "The model for the icon view"
 msgstr "Ikono ikuspegiaren modeloa"
 
 #: ../exo/exo-icon-view.c:792
-msgid ""
-"How the text and icon of each item are positioned relative to each other"
+msgid "How the text and icon of each item are positioned relative to each other"
 msgstr "Elementu bakoitzaren testu eta ikonoaren kokapena bestearekiko"
 
 #: ../exo/exo-icon-view.c:824
@@ -189,7 +188,7 @@ msgstr "Berrantolagarria"
 
 #: ../exo/exo-icon-view.c:825
 msgid "View is reorderable"
-msgstr "Iksupegoia berrantolagarria da"
+msgstr "Ikuspegia berrantolagarria da"
 
 #: ../exo/exo-icon-view.c:840
 msgid "Row Spacing"
@@ -201,11 +200,11 @@ msgstr "Sareta lerroren artean txertatuko den tartea"
 
 #: ../exo/exo-icon-view.c:855
 msgid "Search Column"
-msgstr "Baileta Zutabea"
+msgstr "Bilaketa Zutabea"
 
 #: ../exo/exo-icon-view.c:856
 msgid "Model column to search through when searching through item"
-msgstr "Elementuen artean bilatzerakoane rbailiko den zutabe modeloa"
+msgstr "Elementuen artean bilatzerakoan erabiliko den zutabe modeloa"
 
 #: ../exo/exo-icon-view.c:870
 msgid "Selection mode"
@@ -221,11 +220,11 @@ msgstr "Klik bakana"
 
 #: ../exo/exo-icon-view.c:887 ../exo/exo-tree-view.c:170
 msgid "Whether the items in the view can be activated with single clicks"
-msgstr "Honela ikuspegiko elementuak klika bakan batez aktibatu daitezke"
+msgstr "Honela ikuspegiko elementuak klik bakan batez aktibatu daitezke"
 
 #: ../exo/exo-icon-view.c:903 ../exo/exo-tree-view.c:186
 msgid "Single Click Timeout"
-msgstr "Klik bakan denbora-muga"
+msgstr "Klik bakan denbora muga"
 
 #: ../exo/exo-icon-view.c:904 ../exo/exo-tree-view.c:187
 msgid ""
@@ -281,7 +280,7 @@ msgstr "Tresnabarra E_stiloa"
 
 #: ../exo/exo-toolbars-view.c:775
 msgid "_Desktop Default"
-msgstr "Lehenetsirko I_dazmahaia"
+msgstr "Lehenetsiriko I_dazmahaia"
 
 #: ../exo/exo-toolbars-view.c:784
 msgid "_Icons only"
@@ -628,7 +627,7 @@ msgstr "Huts  \"%s\" irekitzerakoan."
 #: ../exo-helper/exo-helper-chooser-dialog.c:100
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
 msgid "Preferred Applications"
-msgstr "Hobetsitako Aplikazioak"
+msgstr "Hobetsiriko Aplikazioak"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:101
 msgid "Select default applications for various services"
@@ -682,11 +681,11 @@ msgid ""
 "run commands that require a CLI environment."
 msgstr ""
 "Lehenetsiriko Terminal Emuladorea CLI ingurune\n"
-"bat behar duren komandoak abiarazteko erabiliko da."
+"bat behar duten komandoak abiarazteko erabiliko da."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:258
 msgid "Failed to open the documentation browser."
-msgstr "Huts dokumentazio nabigatzailea irekitzarekoan."
+msgstr "Huts dokumentazio nabigatzailea irekitzerakoan."
 
 #: ../exo-helper/exo-helper-chooser.c:177
 #: ../exo-helper/exo-helper-chooser.c:184
@@ -734,7 +733,7 @@ msgid ""
 "Specify the application you want to use\n"
 "as default Web Browser for Xfce:"
 msgstr ""
-"Xfce-ren lehenetsirko nabigatzaile bezala erabili\n"
+"Xfce-ren lehenetsiriko nabigatzaile bezala erabili\n"
 "nahi duzun aplikazioa zehaztu."
 
 #: ../exo-helper/exo-helper-chooser.c:447
@@ -742,7 +741,7 @@ msgid ""
 "Specify the application you want to use\n"
 "as default Mail Reader for Xfce:"
 msgstr ""
-"Xfce-ren lehenetsirko posta bezero bezala erabili\n"
+"Xfce-ren lehenetsiriko posta bezero bezala erabili\n"
 "nahi duzun aplikazioa zehaztu."
 
 #: ../exo-helper/exo-helper-chooser.c:448
@@ -750,7 +749,7 @@ msgid ""
 "Specify the application you want to use\n"
 "as default Terminal Emulator for Xfce:"
 msgstr ""
-"Xfce-ren lehenetsirko terminal emuladore bezala erabili\n"
+"Xfce-ren lehenetsiriko terminal emuladore bezala erabili\n"
 "nahi duzun aplikazioa zehaztu."
 
 #: ../exo-helper/exo-helper-chooser.c:512
@@ -767,7 +766,7 @@ msgstr "Beheko zerrendan ez dagoen aplikazio pertsonalizatu bat aukeratu."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:141
 msgid "Choose Preferred Application"
-msgstr "Hobetsitako Aplikazioa Hautatu"
+msgstr "Hobetsiriko Aplikazioa Hautatu"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:284
 msgid ""
@@ -807,17 +806,17 @@ msgstr "Huts exo-hobetsitako-aplikazioak abiarazterakoan"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:60
 msgid "Button Label|Preferred Applications"
-msgstr "Botoi Etiketak|Hobetsitako Aplikazioak"
+msgstr "Hobetsiriko Aplikazioak"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr ""
-"HObetsitako Aplikazioa (Web Nabigatzailea, ePosta Bezero eta Terminal "
+"Hobetsiriko Aplikazioa (Web Nabigatzailea, ePosta Bezero eta Terminal "
 "Emuladorea)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
 msgid "Xfce 4 Preferred Applications"
-msgstr "Xfce 4 Hobetsitako Aplikazioak"
+msgstr "Xfce 4 Hobetsiriko Aplikazioak"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
@@ -829,7 +828,7 @@ msgstr "Balsa"
 
 #: ../exo-helper/helpers/debian-sensible-browser.desktop.in.h:1
 msgid "Debian Sensible Browser"
-msgstr "Debian Sensible Browser"
+msgstr "Debian Lehenetsiriko Nabigatzailea"
 
 #: ../exo-helper/helpers/debian-x-terminal-emulator.desktop.in.h:1
 msgid "Debian X Terminal Emulator"
@@ -901,14 +900,11 @@ msgstr "       exo-open --launch MOTA [PARAMETROAK...]"
 
 #: ../exo-open/main.c:46
 msgid "  -h, --help                          Print this help message and exit"
-msgstr ""
-"  -h, --help                          Laguntza testua hau bistarazi eta irten"
+msgstr "  -h, --help                          Laguntza testua hau bistarazi eta irten"
 
 #: ../exo-open/main.c:47
-msgid ""
-"  -v, --version                       Print version information and exit"
-msgstr ""
-"  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
+msgid "  -v, --version                       Print version information and exit"
+msgstr "  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
 
 #: ../exo-open/main.c:49
 msgid ""
@@ -926,7 +922,7 @@ msgstr ""
 
 #: ../exo-open/main.c:53
 msgid "The following TYPEs are supported for the --launch command:"
-msgstr "Hurreno MOTA hauek onartzen dira --launch komandoarentzat:"
+msgstr "Hurrengo MOTA hauek onartzen dira --launch komandoarentzat:"
 
 #. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
@@ -953,8 +949,8 @@ msgstr ""
 "gogokoenaz\n"
 "irekitzen saiatuko da. Baina --launch komandoa\n"
 "zehaztu ezkero zein gogoko aplikazio abiaraztea\n"
-"auekra dezakezi, eta horri parametro gehigarriak\n"
-"bidali diezazkieokezu (adib. terminal emuladoreari\n"
+"aukera dezakezu, eta horri parametro gehigarriak\n"
+"bidali diezazkiokezu (adib. terminal emuladoreari\n"
 "terminal batetan ireki beharrezko egiten duen parametroa ipini diezaiokezu)."
 
 #: ../exo-open/main.c:121
@@ -966,3 +962,4 @@ msgstr "Huts \"%s\" ataleko hobetsiriko aplikazioa irekitzerakoan."
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Huts \"%s\" URL-a irekitzerakoan."
+
