--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-03  Alexander Toresson <alexander.toresson@gmail.com>
+
+	* sv.po: Swedish translation added.
+
 2006-05-22  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Gets consistency with the translated strings
